--- a/dashboad.html
+++ b/dashboad.html
@@ -14,6 +14,14 @@
   gtag('js', new Date());
 
   gtag('config', 'G-VFTCCY8SLK');
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PZFBZQ7M');</script>
+<!-- End Google Tag Manager -->
 </script>
 </head>
 
@@ -21,6 +29,10 @@
     <iframe title="REDAX - The Explorer 3.0" width="1140" height="541.25"
         src="https://app.powerbi.com/reportEmbed?reportId=c1b73308-ecd9-46ae-9e3b-b9b5e58b1a7f&autoAuth=true&ctid=247a1097-8893-4c33-8fa7-23f32a8b7262"
         frameborder="0" allowFullScreen="true"></iframe>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PZFBZQ7M"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 </body>
 
 </html>
