--- a/dashboad.html
+++ b/dashboad.html
@@ -25,6 +25,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <button type="button">Click Me!</button>
+    <iframe title="REDAX - The Explorer 3.0" width="1140" height="541.25"
+        src="https://app.powerbi.com/reportEmbed?reportId=c1b73308-ecd9-46ae-9e3b-b9b5e58b1a7f&autoAuth=true&ctid=247a1097-8893-4c33-8fa7-23f32a8b7262"
+        frameborder="0" allowFullScreen="true"></iframe>
 </body>
 
 </html>
