--- a/dashboad.html
+++ b/dashboad.html
@@ -19,7 +19,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <body>
     <iframe title="REDAX - The Explorer 3.0" width="1140" height="541.25"
         src="https://app.powerbi.com/reportEmbed?reportId=c1b73308-ecd9-46ae-9e3b-b9b5e58b1a7f&autoAuth=true&ctid=247a1097-8893-4c33-8fa7-23f32a8b7262"
-        frameborder="0" allowFullScreen="true"></iframe>
+        frameborder="0" allowFullScreen="true" id="powerBiIframe"></iframe>
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PZFBZQ7M"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
