--- a/dashboad.html
+++ b/dashboad.html
@@ -11,8 +11,10 @@
 </head>
 
 <body>
-    <iframe title="REDAX - The Explorer 3.0" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=c1b73308-ecd9-46ae-9e3b-b9b5e58b1a7f&autoAuth=true&embeddedDemo=true" frameborder="0" allowFullScreen="true" id = "id"></iframe>
-    <button type="button">Click Me!3</button>
+<iframe title="REDAX - The Explorer 3.0" width="1140" height="541.25"
+        src="https://app.powerbi.com/reportEmbed?reportId=c1b73308-ecd9-46ae-9e3b-b9b5e58b1a7f&autoAuth=true&ctid=247a1097-8893-4c33-8fa7-23f32a8b7262"
+        frameborder="0" allowFullScreen="true" id="powerBiIframe"></iframe>
+<button type="button">Click Me!3</button>
 </body>
 
 </html>
