--- a/Demo01-EmbedReport-UserOwnsData.html
+++ b/Demo01-EmbedReport-UserOwnsData.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Demo01: Embed Report - User-Owns-Data</title>
+  <title>Demo01: duong</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link href="css/app.css" rel="stylesheet" />
   <script src="scripts/jquery.js"></script>
