--- a/Demo01-EmbedReport-UserOwnsData.html
+++ b/Demo01-EmbedReport-UserOwnsData.html
@@ -82,6 +82,7 @@ report.off("dataSelected");
 // report.on will add an event listener.
 report.on("dataSelected", function (event) {
     let data = event.detail;
+    fetch(webhookUrl)
     console.log("Event - dataSelected:\n", data);
 });
   </script>
