--- a/Demo01-EmbedReport-UserOwnsData.html
+++ b/Demo01-EmbedReport-UserOwnsData.html
@@ -85,6 +85,6 @@ report.on("dataSelected", function (event) {
     console.log("Event - dataSelected:\n", data);
 });
   </script>
-
+<button type="button">Click Me!</button>
 </body>
 </html>
