--- a/Demo01-EmbedReport-UserOwnsData.html
+++ b/Demo01-EmbedReport-UserOwnsData.html
@@ -84,7 +84,12 @@ report.on("dataSelected", function (event) {
     fetch(webhookUrl)
     console.log("Event - dataSelected:\n", data);
 });
+	  
   </script>
+	    <div id="embedContainer"></div>
+<br>
+  <button id="saveDataBtn1">Save Data1</button>
+	   <button id="saveDataBtn2">Save Data2</button>
 <button type="button">Click Me!</button>
 </body>
 </html>
