--- a/Demo01-EmbedReport-UserOwnsData.html
+++ b/Demo01-EmbedReport-UserOwnsData.html
@@ -90,6 +90,7 @@ report.on("dataSelected", function (event) {
 <br>
   <button id="saveDataBtn1">Save Data1</button>
 	   <button id="saveDataBtn2">Save Data2</button>
+	  <input type="text" id="dataInput" value = "test" placeholder="Enter data" />
 <button type="button">Click Me!</button>
 </body>
 </html>
