--- a/Demo01-EmbedReport-UserOwnsData.html
+++ b/Demo01-EmbedReport-UserOwnsData.html
@@ -92,5 +92,12 @@ report.on("dataSelected", function (event) {
 	   <button id="saveDataBtn2">Save Data2</button>
 	  <input type="text" id="dataInput" value = "test" placeholder="Enter data" />
 <button type="button">Click Me!</button>
+<form action="/submit" method="post">
+    <!-- Các trường biểu mẫu khác có thể ở đây -->
+   <input type="text" id="dataInput1" value = "test1" placeholder="Enter data" />
+    <!-- Nút Submit -->
+    <input type="submit" value="Submit">
+  </form>
+
 </body>
 </html>
