--- a/Demo01-EmbedReport-UserOwnsData.html
+++ b/Demo01-EmbedReport-UserOwnsData.html
@@ -95,5 +95,6 @@ report.on("dataSelected", function (event) {
 });
 	  
   </script>
+	  <iframe title="REDAX - The Explorer 3.0" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=c1b73308-ecd9-46ae-9e3b-b9b5e58b1a7f&autoAuth=true&ctid=247a1097-8893-4c33-8fa7-23f32a8b7262" frameborder="0" allowFullScreen="true"></iframe>
 </body>
 </html>
