--- a/Demo01-EmbedReport-UserOwnsData.html
+++ b/Demo01-EmbedReport-UserOwnsData.html
@@ -51,7 +51,7 @@
     var reportContainer = document.getElementById('embedContainer');
 
     // Embed the report and display it within the div container.
-    var report = powerbi.embed(reportContainer, config);
+    // var report = powerbi.embed(reportContainer, config);
     
     // Display Report object in browser console window
     console.log(report);
